k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  labels:
    app: wisecow
spec:
  type: NodePort            # Use NodePort for Minikube testing
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80              # Cluster port
      targetPort: 4499      # Container port
      nodePort: 30049       # Fixed NodePort for external access
